Resolve off-canvas error and hide breadcrumb on mobile

--- a/css/app.css
+++ b/css/app.css
@@ -53,7 +53,7 @@ header#masthead {
 
 .fixed-menu {
     width: 100%;
-    z-index: 5000;
+    z-index: 5;
     position: fixed;
     top: 0;
     -webkit-box-shadow: 0px 6px 7px -3px rgba(0,0,0,0.26);
@@ -694,3 +694,25 @@ footer a {
 
 
 /*--- product ctegory list ---*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 39.9375em) { /* small-only */
+    .products-cart {
+        /* margin-top: 1rem; */
+    }
+}
